test/TestPhases/importchecking/invalid/importProgram.blc
import Program "../valid/imports/program"

@[EntryPoint]
activity Main ()
    run Program.AnAct()
    await true
end